--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
         <p> Name: <%= @user.real_name %> </p>
         <p> Email: <%= @user.email %> </p>
         <p> Year: <%= @user.year %> </p>
-        <%= link_to "Edit Details", edit_user_path(@user), :class => "btn btn-primary btn-sm" %>
+        <%= link_to "Edit Details", edit_user_path(@user), :class => "btn btn-primary btn-xs" %>
         <hr />
         <p> Last Updated: <%= @user.updated_at.to_date %> </p>
         <p> Created: <%= @user.created_at.to_date %> </p>
