--- a/app/views/registrations/search_courses.html.erb
+++ b/app/views/registrations/search_courses.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h1> <%= @department %> Classes </h1><br />
+      <h1> Search Results </h1><br />
       <%= f.submit "Save", :class => "btn btn-primary btn-xs" %><br />
     </div>
     <%= render partial: "register_form", locals: { f: f , courses: @courses} %>
