--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,9 +11,7 @@
     <% if @courses %>
       <% @courses.each do |course| %>
       <tr>
-        <td class="course-link"><%= link_to course.abrev_name + " " + course.title +  " " + 
-            course.crn + " " + course.level , course
-            %> </td>
+        <td class="course-link"><%= link_to course.abrev_name + " " + course.title %> </td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
       </tr>
       <% end %>
