Removed all admin features to keep things safe

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "<< Back to Profile", user_path(@user), :class => 'btn btn-xs' %>
+<br /><br />
 <div class="row">
   <div class="panel panel-default">
     <%= form_tag user_registrations_search_path, :method => 'get' do %>
