--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -58,8 +58,7 @@
         </div>
         <hr />
         <div class="panel-body">
-          <h3 class="panel-title"> <%= link_to "Course Documents", "#" %></h3><br />
-          <%= link_to "Upload", "#", :class => "btn btn-xs" %>
+          <!-- <h3 class="panel-title"> <%= link_to "Course Documents", "#" %></h3><br /> -->
         </div>
       </div>
     </div>
