--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -2,6 +2,10 @@ p {
   font-size: 17px;
 }
 
+.page-style {
+  background-color: white;
+}
+
 .jumbotron {
   padding: 15px;
   background: #F5F5F5;
