--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,5 +17,21 @@
       </li>
     <% end %>
     </ul>
+
+    <% if signed_in? %>
+      <div class="col-sm-3 col-md-3 pull-left">
+        <%= form_tag '#', :method => 'get' , :class => "navbar-form" , role: "search" do %>
+          <div class="input-group">
+            <%= text_field_tag :search, params[:search], placeholder: "Search for classes and people" , :class => "form-control" %>
+            <div class="input-group-btn">
+              <%= button_tag "", :class => "btn btn-default" do %>
+                <i class="glyphicon glyphicon-search"></i>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+
   </div>
 </nav>
