Course and user search

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,37 +1,39 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="navbar-header">
-    <%= link_to "Rensselaer Study Network", root_path, :class => 'navbar-brand' %>
-  </div>
-  <div class="navbar-default">
-    <ul class="nav navbar-nav">
-    <% if signed_in? %>
-      <li>
-        <%= link_to "Profile", user_path(get_signedin_id) %>
-      </li>
-      <li> 
-        <%= link_to "Sign Out", sign_out_path %>
-      </li>
-      <% else %>
-      <li>
-        <%= link_to "Sign In", sign_in_path %>
-      </li>
-    <% end %>
-    </ul>
+  <div class="container">
+    <div class="navbar-header">
+      <%= link_to "Rensselaer Study Network", root_path, :class => 'navbar-brand' %>
+    </div>
+    <div class="navbar-default">
+      <ul class="nav navbar-nav">
+      <% if signed_in? %>
+        <li>
+          <%= link_to "Profile", user_path(get_signedin_id) %>
+        </li>
+        <li> 
+          <%= link_to "Sign Out", sign_out_path %>
+        </li>
+        <% else %>
+        <li>
+          <%= link_to "Sign In", sign_in_path %>
+        </li>
+      <% end %>
+      </ul>
 
-    <% if signed_in? %>
-      <div class="col-sm-3 col-md-3 pull-left">
-        <%= form_tag '#', :method => 'get' , :class => "navbar-form" , role: "search" do %>
-          <div class="input-group">
-            <%= text_field_tag :search, params[:search], placeholder: "Search for classes and people" , :class => "form-control" %>
-            <div class="input-group-btn">
-              <%= button_tag "", :class => "btn btn-default" do %>
-                <i class="glyphicon glyphicon-search"></i>
-              <% end %>
+      <% if signed_in? %>
+        <div class="col-sm-3 col-md-3 pull-right">
+          <%= form_tag search_path, :method => 'get' , :class => "navbar-form" , role: "search" do %>
+            <div class="input-group">
+              <%= text_field_tag :search, params[:search], placeholder: "Search classes & people" , :class => "form-control" %>
+              <div class="input-group-btn">
+                <%= button_tag "", :class => "btn btn-default" do %>
+                  <i class="glyphicon glyphicon-search"></i>
+                <% end %>
+              </div>
             </div>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+          <% end %>
+        </div>
+      <% end %>
 
+    </div>
   </div>
 </nav>
