--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,22 +1,19 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-14">
-      <div class="panel panel-default">
-        <div class="default-margin">
-          <h1><%= @course.abrev_name + " - " + @course.title.downcase.capitalize %></h1>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-9">
+
+    <!-- Message Board -->
+    <div class="col-sm-8">
       <div class="row">
         <div class="panel panel-default">
+          <div class="default-margin">
+            <h1><%= @course.abrev_name + " - " + @course.title.downcase.capitalize %></h1>
+          </div>
+          <br />
           <div class="panel-body">
-            <h3 class="panel-title"><%= link_to "Message Board", course_messages_path(@course) %></h3><hr />
-            <div style="float: right">
+            <h3 class="panel-title"><%= link_to "Message Board", course_messages_path(@course) %></h3>
+            <span class="pull-right">
               <%= link_to "+ New Post", new_course_post_path(@course), class: "btn btn-primary btn-xs" %>
-            </div>
+            </span>
             <br /> <br />
             <%= paginate @posts %>
             <% if !@posts.empty? %>
@@ -29,38 +26,37 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
+
+    <!-- Connections -->
+    <div class="col-sm-4">
       <div class="panel panel-default">
         <div class="panel-body">
           <h3 class="panel-title"><%= link_to 'Connections', course_connections_path(@course) %></h3><hr />
-          <% if @users.length > 0 %>
-            <% @users.each do |user| %>
-              <% if user.id != get_signedin_id %>
-                <div class="media">
-                  <a class="pull-left" href=<%= "/users/#{user.id}" %>>
-                    <%= image_tag avatar_url(user), :class => 'img-responsive', width: '34px', height: '34px' %> 
-                  </a>
-                  <div class="media-body">
-                    <h4 class="media-heading">
-                    <% if not user.real_name.empty? %>
-                      <%= link_to user.real_name, user %>
-                    <% else %>
-                      <%= link_to user.username, user %>
-                    <% end %>
-                    </h4>
+            <% if @users.length > 0 %>
+              <% @users.each do |user| %>
+                <% if user.id != get_signedin_id %>
+                  <div class="media">
+                    <a class="pull-left" href=<%= "/users/#{user.id}" %>>
+                      <%= image_tag avatar_url(user), :class => 'img-responsive', width: '34px', height: '34px' %> 
+                    </a>
+                    <div class="media-body">
+                      <h4 class="media-heading">
+                        <% if not user.real_name.empty? %>
+                          <%= link_to user.real_name, user %>
+                        <% else %>
+                          <%= link_to user.username, user %>
+                        <% end %>
+                      </h4>
+                    </div>
                   </div>
-                </div>
+                <% end %>
               <% end %>
+            <% else %>
+              <p>No Connections Found :( </p>
             <% end %>
-          <% else %>
-            <p>No Connections Found :( </p>
-          <% end %>
-        </div>
-        <hr />
-        <div class="panel-body">
-          <!-- <h3 class="panel-title"> <%= link_to "Course Documents", "#" %></h3><br /> -->
         </div>
       </div>
     </div>
+
   </div>
 </div>
