News feed and navigation changes

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -33,3 +33,14 @@
   margin-top: 5px;
   margin-left: 14px;
 }
+
+.course-tile-link {
+  color: black;
+  &:hover {
+    color: black;
+  }
+}
+
+.thumbnail {
+  border-style: none;
+}
