--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,6 +6,7 @@
   </div>
   <div class="panel-body">
     <p> <strong>Profile Picture</strong> </p>
+    <%= image_tag avatar_url(get_signedin_user), :class => 'img-responsive', width: '124px', height: '124px' %> 
     <p> To change your profile picture, login to <%= link_to "Gravatar", "http://en.gravatar.com/" %> and upload a photo
       using your RSN email: <strong><span id="current_email"><%= @user.email %></span></strong> </p>
 
@@ -13,11 +14,11 @@
     <br>
     <p>
       <%= f.label :name %>
-      <%= f.text_field :real_name, value: @user.real_name %>
+      <%= f.text_field :real_name, value: @user.real_name, maxlength: 16%>
     </p>
     <p>
       <%= f.label :email %>
-      <%= f.text_field :email, value: @user.email %>
+      <%= f.text_field :email, value: @user.email, maxlength: 255, size: 16 %>
     </p>
     <p> 
       <%= f.label :year %>
