--- a/app/views/courses/messages.html.erb
+++ b/app/views/courses/messages.html.erb
@@ -2,7 +2,10 @@
 <div class="container">
   <div class="panel panel-default">
     <div class="panel-body">
-      <p>Message board for <%= link_to @course.title.downcase.capitalize, course_path(@course), :class => 'unstyled-link' %></p><hr />
+      <div class="default-margin">
+          <h3>Message board for <%= link_to @course.title.downcase.capitalize, course_path(@course), :class => 'unstyled-link' %></h3>
+      </div>
+      <hr />
         <div style="float: right">
           <%= link_to "+ New Post", new_course_post_path(@course), class: "btn btn-primary btn-xs" %>
         </div>
